x-overflow & margin fixes
added overflow hidden to all contains per issue:
https://github.com/michalsnik/aos/issues/416

fixed some margin inconsistencies

--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -236,5 +236,6 @@ footer {
 .container {
     padding-left: 0 !important;
     padding-right: 0 !important;
+    overflow: hidden !important;
     /*max-width: none !important;*/
 }
